[package]
name = "aether_spyglass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", default-features = false }
bevy_egui = "0.20.2"

[dev-dependencies.bevy]
version = "0.10"
default-features = false
features = ["bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_pbr"]

[profile.dev.package."*"]
opt-level = 3
