[package]
name = "aether_spyglass"
version = "0.2.0"
edition = "2021"
description = "A general-purpose extensible inspector for bevy engine"
documentation = "https://docs.rs/aether_spyglass/0.1.0/aether_spyglass/"
readme = "README"
repository = "https://github.com/PROMETHIA-27/aether_spyglass"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11", default-features = false }
bevy_egui = "0.21.0"

[dev-dependencies.bevy]
version = "0.11"
default-features = false
features = ["bevy_winit", "bevy_render", "bevy_core_pipeline", "bevy_pbr"]

[profile.dev.package."*"]
opt-level = 3
